syntax = "proto3";

option go_package = "github.com/tinahhhhh/go-grpc/spam";

package spam;

// The assessment service definition.
service Assessment {
  // Sends a assessment resuest
  rpc CheckSpam (AssessmentRequest) returns (AssessmentReply) {}
}

// The request message containing the user's name.
message AssessmentRequest {
  string entity = 1;
}

// The response message containing the greetings
message AssessmentReply {
  string message = 1;
}